--- a/notes/year.html
+++ b/notes/year.html
@@ -289,6 +289,270 @@
                       >
                     </li>
                   </ul>
+                  <ul>
+                    <li>
+                      <strong>Physics GRE (Fall 2021)</strong><br />
+                      These are my self-study notes for the Physics GRE, which I
+                      took in 2021.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/Physics_GRE_Notes.pdf"
+                        >Physics GRE</a
+                      >
+                    </li>
+                  </ul>
+                </section>
+                <hr />
+                <section id="2020">
+                  <header>
+                    <h3>
+                      <a href="#2020" class="scrolly">2020</a>
+                    </h3>
+                  </header>
+                  <ul>
+                    <li>
+                      <strong>Optics (Spring 2020)</strong><br />
+                      This term was unique due to COVID-19, as we had to attend
+                      lectures online from home. The course was taught by Prof.
+                      Lu-Shuai Cao and Prof. Ze-Huang Lu. My notes were selected
+                      as exemplary for the course and shared with classmates.
+                      Due to the large file size, the notes have been divided
+                      into four parts.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part1.pdf"
+                        >Optics - Part 1</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part2.pdf"
+                        >Optics - Part 2</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part3.pdf"
+                        >Optics - Part 3</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part4.pdf"
+                        >Optics - Part 4</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Analogue Electronics (Spring 2020)</strong><br />
+                      This course was taught by Prof. Tian-Ping Deng. My notes
+                      based on his lecture online,
+                      <a href="https://www.icourse163.org/course/hust-481015"
+                        >MOOC</a
+                      >
+                      and the textbook. Due to the large file size, the notes
+                      have been divided into four parts.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[模拟电子技术]笔记_Part1.pdf"
+                        >Analogue Electronics - Part 1</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[模拟电子技术]笔记_Part2.pdf"
+                        >Analogue Electronics - Part 2</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[模拟电子技术]笔记_Part3.pdf"
+                        >Analogue Electronics - Part 3</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[模拟电子技术]笔记_Part4.pdf"
+                        >Analogue Electronics - Part 4</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Quantum Mechanics (Fall 2020)</strong><br />
+                      This course was taught by Prof. Ying Wu and Prof. Jia-Hua
+                      Li. However, it overlapped with another advanced course I
+                      had selected, so I decided to learn independently. My
+                      studies were based on Griffiths'
+                      <i>Introduction to Quantum Mechanics</i> and the online
+                      course from
+                      <a
+                        href="https://ocw.mit.edu/courses/8-04-quantum-physics-i-spring-2016/"
+                        >MIT OCW</a
+                      >.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[量子力学]学习笔记.pdf"
+                        >Quantum Mechanics</a
+                      ><br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Notes: </strong
+                      ><a href="/docs/notes/[量子力学]期末偷分宝典.pdf"
+                        >Quantum Mechanics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Electrodynamics (Fall 2020)</strong><br />
+                      This course was taught by Prof. Zhao-Feng Kang.<br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Notes: </strong
+                      ><a href="/docs/notes/[电动力学]期末偷分宝典.pdf"
+                        >Electrodynamics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Advanced Quantum Mechanics (Fall 2020)</strong
+                      ><br />
+                      This course was taught by Prof. Yong Hu.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[高等量子力学]课堂笔记.pdf"
+                        >Advanced Quantum Mechanics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Digital Electronics (Fall 2020)</strong><br />
+                      This course was taught by Prof. Qi Song.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[数字电子技术]笔记_Part1.pdf"
+                        >Digital Electronics - Part 1</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[数字电子技术]笔记_Part2.pdf"
+                        >Digital Electronics - Part 2</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[数字电子技术]笔记_Part3.pdf"
+                        >Digital Electronics - Part 3</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[数字电子技术]笔记_Part4.pdf"
+                        >Digital Electronics - Part 4</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[数字电子技术]笔记_Part5.pdf"
+                        >Digital Electronics - Part 5</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Quantum Mechanics II (Summer 2020)</strong><br />
+                      These are my lecture notes from the Quantum Mechanics II
+                      course taught by Prof. Zhixin Qian during the 2020 Summer
+                      School at Peking University.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/Ch1_Phase in QM.pdf"
+                        >Chapter 1: Phase in Quantum Mechanics</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a
+                        href="/docs/notes/Ch2_Path Integral Formalism of QM.pdf"
+                        >Chapter 2: Path Integral Formalism of Quantum
+                        Mechanics</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/Ch3_The WKB Approximation.pdf"
+                        >Chapter 3: The WKB Approximation</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a
+                        href="/docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
+                        >Chapter 4: Rotation and Vibration of Molecules</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a
+                        href="/docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
+                        >Chapter 5: Variation Principle</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a
+                        href="/docs/notes/Ch6_Introduction to Many-body Theory.pdf"
+                        >Chapter 6: Introduction to Many-Body Theory</a
+                      >
+                    </li>
+                  </ul>
+                </section>
+                <hr />
+                <section id="2019">
+                  <header>
+                    <h3>
+                      <a href="#2019" class="scrolly">2019</a>
+                    </h3>
+                  </header>
+                  <ul>
+                    <li>
+                      <strong
+                        >Mathematical Methods in Physics (Fall 2019)</strong
+                      ><br />
+                      This course consists of two parts. The first part,
+                      <strong>Complex Analysis</strong>, was taught by Prof.
+                      Cheng-Gang Shao. The second part,
+                      <strong>Equations of Mathematical Physics</strong>, was
+                      taught by Prof. Yong Hu. The content and structure of my
+                      notes primarily derived from his lecture notes. <br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Note: </strong
+                      ><a href="/docs/notes/[复变函数]期末复习笔记.pdf"
+                        >Complex Analysis</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
+                        >Equations of Mathematical Physics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Theoretical Mechanics (Fall 2019)</strong><br />
+                      Taught by Prof. Sheng-You Huang, this course covered
+                      topics ranging from Lagrangian Mechanics to Hamiltonian
+                      Mechanics, with several applications including central
+                      force motion, rigid bodies, and small oscillations.
+                      Notably, these were my first notes written in English.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/note-on-classical-mechanics.pdf"
+                        >Theoretical Mechanics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Electromagnetics (Fall 2019)</strong><br />
+                      This course was taught by Prof. Xue-Wen Chen, which
+                      covered include electrostatics, magnetostatics,
+                      electromagnetic waves, and Maxwell's equations.<br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Notes: </strong
+                      ><a href="/docs/notes/[电磁学]期末复习笔记.pdf"
+                        >Electromagnetics</a
+                      >
+                    </li>
+                  </ul>
                 </section>
               </article>
             </div>
