--- a/notes/year.html
+++ b/notes/year.html
@@ -76,12 +76,6 @@
               <hr class="first" />
               <section>
                 <h4>
-                  <a href="#imperial" class="scrolly"
-                    >Imperial College London</a
-                  >
-                </h4>
-                <p></p>
-                <h4>
                   <a href="#2024" class="scrolly">2024</a>
                 </h4>
                 <p></p>
@@ -125,8 +119,7 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Quantum Theory of Matter (Spring 2024)</strong
-                      ><br />
+                      <strong>Quantum Theory of Matter</strong><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
@@ -137,7 +130,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Laser Technology (Spring 2024)</strong><br />
+                      <strong>Laser Technology</strong><br />
                       This course covers two main topics:
                       <strong>Laser Device Technology</strong> and
                       <strong>Nonlinear Optics</strong>. I am not particularly
@@ -169,7 +162,7 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Quantum Information (Fall 2023)</strong>
+                      <strong>Quantum Information</strong>
                       <br />
                       This course was taught by Prof. Myungshik Kim. My notes
                       were based on his lecture notes and the textbook by
@@ -183,7 +176,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Optics (Fall 2023)</strong><br />
+                      <strong>Quantum Optics</strong><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/notes-on-quantum-optics.pdf"
@@ -193,9 +186,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong
-                        >Mathematical Methods for Physicists (Fall 2023)</strong
-                      ><br />
+                      <strong>Mathematical Methods for Physicists</strong><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;
                       <strong>Study Notes: </strong
                       ><a
@@ -211,8 +202,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Advanced Classical Mechanics (Fall 2023)</strong
-                      ><br />
+                      <strong>Advanced Classical Mechanics</strong><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Note: </strong
                       ><a
@@ -231,9 +221,7 @@
                   </header>
                   <ul>
                     <li>
-                      <strong
-                        >Thermodynamics and Statistical Physics (Spring
-                        2021)</strong
+                      <strong>Thermodynamics and Statistical Physics</strong
                       ><br />
                       This course, taught by Prof. Shun Wang, was quite
                       challenging. It was conducted entirely in English,
@@ -252,7 +240,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Solid State Physics (Spring 2021)</strong><br />
+                      <strong>Solid State Physics</strong><br />
                       This course was taught by Prof. Liu-Song Yuan.<br />
                       <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
@@ -263,7 +251,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Optics (Fall 2021)</strong><br />
+                      <strong>Quantum Optics</strong><br />
                       This course was taught by Prof. Jia-Hua Li.<br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -279,8 +267,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Introduction to Plasma Physics (Fall 2021)</strong
-                      ><br />
+                      <strong>Introduction to Plasma Physics</strong><br />
                       This course was taught by Prof. He-Lin Wei.<br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -291,7 +278,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Physics GRE (Fall 2021)</strong><br />
+                      <strong>Physics GRE</strong><br />
                       These are my self-study notes for the Physics GRE, which I
                       took in 2021.<br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
@@ -311,7 +298,7 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Optics (Spring 2020)</strong><br />
+                      <strong>Optics</strong><br />
                       This term was unique due to COVID-19, as we had to attend
                       lectures online from home. The course was taught by Prof.
                       Lu-Shuai Cao and Prof. Ze-Huang Lu. My notes were selected
@@ -342,7 +329,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Analogue Electronics (Spring 2020)</strong><br />
+                      <strong>Analogue Electronics</strong><br />
                       This course was taught by Prof. Tian-Ping Deng. My notes
                       based on his lecture online,
                       <a href="https://www.icourse163.org/course/hust-481015"
@@ -374,7 +361,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Mechanics (Fall 2020)</strong><br />
+                      <strong>Quantum Mechanics</strong><br />
                       This course was taught by Prof. Ying Wu and Prof. Jia-Hua
                       Li. However, it overlapped with another advanced course I
                       had selected, so I decided to learn independently. My
@@ -399,7 +386,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Electrodynamics (Fall 2020)</strong><br />
+                      <strong>Electrodynamics</strong><br />
                       This course was taught by Prof. Zhao-Feng Kang.<br />
                       <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
@@ -410,8 +397,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Advanced Quantum Mechanics (Fall 2020)</strong
-                      ><br />
+                      <strong>Advanced Quantum Mechanics</strong><br />
                       This course was taught by Prof. Yong Hu.<br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -422,7 +408,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Digital Electronics (Fall 2020)</strong><br />
+                      <strong>Digital Electronics</strong><br />
                       This course was taught by Prof. Qi Song.<br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -453,7 +439,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Mechanics II (Summer 2020)</strong><br />
+                      <strong>Quantum Mechanics II</strong><br />
                       These are my lecture notes from the Quantum Mechanics II
                       course taught by Prof. Zhixin Qian during the 2020 Summer
                       School at Peking University.<br />
@@ -504,9 +490,7 @@
                   </header>
                   <ul>
                     <li>
-                      <strong
-                        >Mathematical Methods in Physics (Fall 2019)</strong
-                      ><br />
+                      <strong>Mathematical Methods in Physics</strong><br />
                       This course consists of two parts. The first part,
                       <strong>Complex Analysis</strong>, was taught by Prof.
                       Cheng-Gang Shao. The second part,
@@ -527,7 +511,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Theoretical Mechanics (Fall 2019)</strong><br />
+                      <strong>Theoretical Mechanics</strong><br />
                       Taught by Prof. Sheng-You Huang, this course covered
                       topics ranging from Lagrangian Mechanics to Hamiltonian
                       Mechanics, with several applications including central
@@ -542,7 +526,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Electromagnetics (Fall 2019)</strong><br />
+                      <strong>Electromagnetics</strong><br />
                       This course was taught by Prof. Xue-Wen Chen, which
                       covered include electrostatics, magnetostatics,
                       electromagnetic waves, and Maxwell's equations.<br />
