--- a/notes/index.html
+++ b/notes/index.html
@@ -227,7 +227,7 @@
                     href="/notes/index.html"
                     >University</a
                   >&nbsp;&nbsp; <i class="fas fa-calendar-check"></i>&nbsp;
-                  <a href="/notes/year.html">year</a>
+                  <a href="/notes/year.html">Year</a>
                 </p>
                 <header>
                   <h2><a href="#main" class="scrolly">Notes</a></h2>
