--- a/zh/research/calibration-of-trapped-ion-systems.html
+++ b/zh/research/calibration-of-trapped-ion-systems.html
@@ -179,7 +179,7 @@
                 </header>
                 <h4>动机</h4>
                 <h4>声子频率的标定</h4>
-                <h4>Calibration of Lamb-Dicke parameters</h4>
+                <h4>Lamb-Dicke参数的标定</h4>
               </section>
               <hr />
               <section>
