--- a/zh/research/index.html
+++ b/zh/research/index.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="/index.html" id="logo">Chen's Physics World</a></h1>
+            <h1><a href="/index.html" id="logo">橙子的物理世界</a></h1>
           </header>
         </div>
 
@@ -75,7 +75,7 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <header>
-                <h3>Research</h3>
+                <h3>欢迎进入秘密区域：中文科普区😁</h3>
               </header>
               <p></p>
               <section>
