--- a/zh/research/index.html
+++ b/zh/research/index.html
@@ -32,9 +32,9 @@
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/index.html">主页</a></li>
             <li>
-              <a href="/research/index.html">Research</a>
+              <a href="/research/index.html">科研</a>
               <ul>
                 <li>
                   <a
@@ -55,13 +55,13 @@
                 </li>
               </ul>
             </li>
-            <li><a href="/publications.html">Publications</a></li>
-            <li><a href="/presentations.html">Presentations</a></li>
-            <li><a href="/notes/index.html">Notes</a></li>
+            <li><a href="/publications.html">论文及专利</a></li>
+            <li><a href="/presentations.html">演讲</a></li>
+            <li><a href="/notes/index.html">笔记</a></li>
             <li>
-              <a href="#">Life</a>
+              <a href="#">生活</a>
               <ul>
-                <li><a href="/photography.html">Photography</a></li>
+                <li><a href="/photography.html">摄影</a></li>
               </ul>
             </li>
           </ul>
