--- a/zh/research/index.html
+++ b/zh/research/index.html
@@ -104,6 +104,14 @@
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="overview">
+                <p>欢迎进入未开放区域，中文科普专区！缓慢施工中......</p>
+                <p>
+                  我想在这里做量子计算的中文科普，因为这方面的资料还太少了。
+                </p>
+                <header>
+                  <h2>什么是量子计算</h2>
+                </header>
+
                 <header>
                   <h2>Overview</h2>
                 </header>
