--- a/zh/research/index.html
+++ b/zh/research/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Research - Chen's Physics World</title>
+    <title>Quantum Computing - Chen's Physics World</title>
     <meta charset="utf-8" />
     <link rel="icon" href="/images/icon.png" type="image/png" />
     <meta
@@ -25,16 +25,16 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="/index.html" id="logo">橙子的物理世界</a></h1>
+            <h1><a href="/index.html" id="logo">Chen's Physics World</a></h1>
           </header>
         </div>
 
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a href="/index.html">主页</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li>
-              <a href="/research/index.html">科研</a>
+              <a href="/research/index.html">Research</a>
               <ul>
                 <li>
                   <a
@@ -55,13 +55,13 @@
                 </li>
               </ul>
             </li>
-            <li><a href="/publications.html">论文及专利</a></li>
-            <li><a href="/presentations.html">演讲</a></li>
-            <li><a href="/notes/index.html">笔记</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/presentations.html">Presentations</a></li>
+            <li><a href="/notes/index.html">Notes</a></li>
             <li>
-              <a href="#">生活</a>
+              <a href="#">Life</a>
               <ul>
-                <li><a href="/photography.html">摄影</a></li>
+                <li><a href="/photography.html">Photography</a></li>
               </ul>
             </li>
           </ul>
@@ -75,7 +75,7 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <header>
-                <h3>科研</h3>
+                <h3>Contents</h3>
               </header>
               <p></p>
               <section>
@@ -151,114 +151,6 @@
                 </p>
               </article>
               <hr />
-              <section>
-                <header>
-                  <h3>
-                    <a
-                      href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                      >Compilation for neutral atom quantum computers</a
-                    >
-                  </h3>
-                </header>
-                <p>
-                  Advances in laser technology have propelled the rapid
-                  development of neutral atom quantum computing platforms in
-                  last few years. However, to successfully run quantum
-                  algorithms on quantum platforms, high-level algorithmic
-                  descriptions must be translated into executable hardware
-                  operations through a compilation process, and the compilation
-                  work for neutral atom quantum computing is still in the early
-                  exploratory stages.
-                </p>
-                <p>
-                  Neutral atom quantum computing systems can coherently move the
-                  positions of atoms trapped in optical tweezers, allowing
-                  real-time changes in qubit connectivity during computation
-                  while satisfying the constraints of the optical tweezer array.
-                  This dynamic connectivity, combined with the large number of
-                  qubits, architecture design introduces new possibilities and
-                  design challenges for quantum computing compilation. Rapidly
-                  completing the compilation process and fully leveraging the
-                  unique features of neutral atom quantum computing systems is a
-                  critical and practically significant task.
-                </p>
-                <footer>
-                  <a
-                    href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    class="button"
-                    >Read more</a
-                  >
-                </footer>
-              </section>
-              <hr />
-              <section>
-                <header>
-                  <h3>
-                    <a href="/research/calibration-of-trapped-ion-systems.html"
-                      >Calibration of trapped-ion systems</a
-                    >
-                  </h3>
-                </header>
-                <p>
-                  The key advantages of Calibration of trapped-ion systems
-                  include long quantum coherence times, high-precision
-                  single-qubit and two-qubit operations, and high-fidelity
-                  operations between any two qubits within the system. In
-                  trapped-ion quantum computing, single-qubit operations
-                  typically involve transitions between internal energy levels
-                  of the ions, which can be achieved by addressing the target
-                  ion with laser pulses. However, multi-qubit operations rely on
-                  the collective vibrational modes of the ion chain, known as
-                  phonons. Critical parameters such as ion positions, phonon
-                  frequencies, and the strength of ion-phonon interactions are
-                  closely related to the structure of the ion trap chip, the
-                  surrounding environment, and the configuration of the trapping
-                  potential. To achieve high-performance trapped-ion quantum
-                  computing, precise calibration of system parameters is
-                  essential.
-                </p>
-                <footer>
-                  <a
-                    href="/research/calibration-of-trapped-ion-systems.html"
-                    class="button"
-                    >Read more</a
-                  >
-                </footer>
-              </section>
-              <hr />
-              <section>
-                <header>
-                  <h3>
-                    <a
-                      href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >
-                      Charge Noise in Semiconductor Spin Qubits for Quantum
-                      Computing</a
-                    >
-                  </h3>
-                </header>
-                <p>
-                  Semiconductor spin qubits are a promising candidate for
-                  quantum computing, owing to their compatibility with existing
-                  semiconductor fabrication techniques, long coherence times,
-                  and scalability for large-scale integration. However, building
-                  a robust quantum computer with semiconductor spin qubits faces
-                  significant challenges, the most pressing being
-                  noise—particularly charge noise. Charge noise accelerates
-                  decoherence, leading to quantum state dephasing caused by
-                  external disturbances, which undermines the stability and
-                  reliability of qubit operations. To address this critical
-                  issue, it is essential to first study and understand the
-                  underlying mechanisms of charge noise.
-                </p>
-                <footer>
-                  <a
-                    href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    class="button"
-                    >Read more</a
-                  >
-                </footer>
-              </section>
             </div>
           </div>
         </div>
