--- a/zh/research/index.html
+++ b/zh/research/index.html
@@ -78,29 +78,7 @@
                 <h3>Contents</h3>
               </header>
               <p></p>
-              <section>
-                <h4><a href="/research/index.html">Overview</a></h4>
-                <p></p>
-                <h4>
-                  <a
-                    href="/research/compilation-for-neutral-atom-quantum-computers.html"
-                    >Compilation for neutral atom quantum computers</a
-                  >
-                </h4>
-                <p></p>
-                <h4>
-                  <a href="/research/calibration-of-trapped-ion-systems.html"
-                    >Calibration of trapped-ion systems</a
-                  >
-                </h4>
-                <p></p>
-                <h4>
-                  <a
-                    href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge noise in semiconductor spin qubits</a
-                  >
-                </h4>
-              </section>
+              <section></section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="overview">
@@ -111,44 +89,12 @@
                 <header>
                   <h2>什么是量子计算</h2>
                 </header>
-
                 <header>
-                  <h2>Overview</h2>
+                  <h2>如何构建一台量子计算机</h2>
                 </header>
-                <p>
-                  Throughout my research journey, I have worked with various
-                  <strong>quantum computing</strong> platforms, including
-                  <strong>trapped ions</strong>, <strong>Rydberg atoms</strong>,
-                  and <strong>semiconductors</strong>. These experiences have
-                  provided me with a comprehensive perspective on quantum
-                  computing as a multifaceted field, encompassing
-                  <strong>physical</strong>, <strong>logical</strong>, and
-                  <strong>application</strong> layers. At the physical level, I
-                  am particularly interested in <strong>qubit control</strong>.
-                  My work in <strong>quantum compilation</strong> has allowed me
-                  to explore the logical layer, deepening my understanding of
-                  the interactions between these levels. I am also eager to
-                  explore different <strong>quantum algorithms</strong>, and
-                  achieve different applications, such as quantum simulations
-                  and quantum machine learning.
-                </p>
                 <a class="image featured"
                   ><img src="/images/quantum-computer-levels.jpeg" alt=""
                 /></a>
-                <p>
-                  The awarding of
-                  <a
-                    href="https://www.nobelprize.org/prizes/physics/2024/summary/"
-                    >the 2024 Nobel Prize in Physics to John J. Hopfield and
-                    Geoffrey E. Hinton for their foundational work in machine
-                    learning with artificial neural networks</a
-                  >
-                  underscores the growing significance of artificial
-                  intelligence in scientific research. I believe that
-                  <strong>integrating AI into physics investigations</strong>
-                  is an emerging trend, offering the potential to significantly
-                  accelerate discoveries and expand the boundaries of the field.
-                </p>
               </article>
               <hr />
             </div>
