--- a/notes/year.html
+++ b/notes/year.html
@@ -140,7 +140,7 @@
                       mathematical derivations to prove or explore the
                       principles in depth. <br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Note: </strong
+                        >Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-laser-device-technology.pdf"
                         >Laser Device Technology</a
@@ -204,7 +204,7 @@
                     <li>
                       <strong>Advanced Classical Mechanics</strong><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Note: </strong
+                        >Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-advanced-classical-physics.pdf"
                         >Advanced Classical Mechanics</a
