--- a/notes/index.html
+++ b/notes/index.html
@@ -292,7 +292,7 @@
                       <strong>Advanced Classical Mechanics (Fall 2023)</strong
                       ><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Note: </strong
+                        >Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-advanced-classical-physics.pdf"
                         >Advanced Classical Mechanics</a
@@ -323,7 +323,7 @@
                       mathematical derivations to prove or explore the
                       principles in depth. <br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Note: </strong
+                        >Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-laser-device-technology.pdf"
                         >Laser Device Technology</a
