--- a/presentations.html
+++ b/presentations.html
@@ -84,6 +84,19 @@
               </header>
               <ul>
                 <li>
+                  <strong>Research Progress: </strong
+                  ><a href="/docs/presentations/2024-08-21-charge-noise.pdf"
+                    >Charge Noise in Semiconductor Spin Qubits for Quantum
+                    Computing</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;August 21,
+                  2024<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Blackett
+                  Laboratory, Imperial College London
+                </li>
+              </ul>
+              <ul>
+                <li>
                   <strong>Course Presentation: </strong
                   ><a href="/docs/presentations/2024-02-22-scaling.pdf"
                     >Architectures and Approaches in Scaling the Trapped-Ion
